# bifrost

./: .env.example  .gitignore  README.md  RELEASE-NOTES.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-gateway.yml  deploy-research-agent.yml  release.yml
agents/coding-agent/: pyproject.toml
agents/coding-agent/src/: graph.py  main.py  nodes.py
agents/research-agent/: pyproject.toml
agents/research-agent/src/: graph.py  main.py  nodes.py  state.py
apis/gateway/: Dockerfile  pyproject.toml
apis/gateway/src/: main.py
apis/gateway/src/routers/: chat.py
apis/webhooks/: Dockerfile  pyproject.toml
apis/webhooks/src/: main.py
apps/code-reviewer/: pyproject.toml
apps/code-reviewer/api/: index.py
apps/hello-api/: pyproject.toml
apps/hello-api/api/: index.py
apps/notes-api/: pyproject.toml
apps/notes-api/api/: index.py
docs/: GUIDE.md
mcp-servers/code-runner/: pyproject.toml
mcp-servers/code-runner/src/: server.py
mcp-servers/knowledge-base/: Dockerfile  pyproject.toml
mcp-servers/knowledge-base/src/: server.py
scripts/: seed_db.py
